kube-infra/kustomize/ci-cd/argocd/envs/prod/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ci-cd
---
apiVersion: v1
kind: Namespace
metadata:
  name: security
---
apiVersion: v1
kind: Namespace
metadata:
  name: dns-infra
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
---
apiVersion: v1
kind: Namespace
metadata:
  name: keptn
---
apiVersion: v1
kind: Namespace
metadata:
  name: keptn-jes
---
apiVersion: v1
kind: Namespace
metadata:
  name: flux-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: falco
---
apiVersion: v1
kind: Namespace
metadata:
  name: ortelius-docs
---
apiVersion: v1
kind: Namespace
metadata:
  name: ortelius-www
---
apiVersion: v1
kind: Namespace
metadata:
  name: ortelius
---
apiVersion: v1
kind: Namespace
metadata:
  name: backstage
---
apiVersion: v1
kind: Namespace
metadata:
  name: postgres
---
